<resources>
    <string name="app_name">appvistacurso</string>
    <string name="txt_titulo">Aplicativo Lista Vip Curso Android</string>
    <string name="txt_selecione_o_curso">Selecione o Curso</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_telefone_de_contato">Telefone de Contato</string>
    <string name="txt_hint_edit_nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
</resources>